# SimpleCubesGL

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: Object.cpp  Object.h  Scene.cpp  Scene.h  Transform.h
src/graphics/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Texture.h  glutils.cpp  glutils.h  shader.cpp  shader.h
src/shaders/: fragSimple.shader  vertexSimple.shader
